# phylogeny

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: consense_array copy.slurm  consense_array.slurm  exabayes.slurm
scripts/: download_exabayes_consensus.sh  parse_exabayes_consensus.sh
src/: helper.py
src/clans/: clans_color_groups.py  clans_parser.py  clans_score.ipynb  run_clans.sh
src/itol/: color_itol.py
src/phylogeny/: merge_fasta_files.py  nexus2fasta.py  nexus2tree.py  parse_signalp6.py  process_alignments.py  run_mafft.py
src/phylogeny/exabayes/: display_summary_exabayes_info.py  fasta_sanitizer.py  json2fasta_domain_filter.py  modify_exabayes_file.ipynb  parse_exabayes_info.py  run_sumtrees.sh
src/prot_family/: parse_busco.ipynb  parse_dpp4.ipynb  protein_name_mapping.py
tests/: test_helper.py  test_protein_name_mapping.py
