[project]
name = "phylogeny"
version = "0.1.0"
description = "Phylogenetic analysis tools for alignment processing and tree visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dendropy>=5.0.1",
    "distinctipy>=1.3.4",
    "h5py>=3.14.0",
    "jupyter>=1.1.1",
    "kneed>=0.8.5",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "protspace[frontend]==2.1.2",
    "pyfaidx>=0.8.1.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
# Set line length to 88 (Black's default)
line-length = 88
target-version = "py312"

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

lint.ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function call in argument defaults
    "B905",  # zip() without an explicit strict= parameter
]

# Exclude common directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "data",
    "notebook",
    "out",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line endings
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
